add break to item
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/_data/scores.yaml
+++ b/_data/scores.yaml
@@ -33,7 +33,7 @@ items:
     command to have. Damn.
   score: 244
 - name: That one time I  plugged in 110 volts to the experiment control panel connector
-    that popped the tops off almost all of the TTL chips in the unit...
+    that popped the tops off almost all of the TTL <br>chips in the unit...
   score: 238
 - name: C++ in HPC
   score: 233
